--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "6.3",
+    "react-router-dom": "6.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
