--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
+    "@tanstack/react-query": "^4.24.4",
+    "axios": "^1.3.0",
+    "octokit": "^2.0.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "6.3",
-    "react-router-dom": "6.3"
+    "react-router-dom": "6.3",
+    "use-query-params": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
