--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "rome": "^11.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vite-tsconfig-paths": "^4.0.5"
