--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
     "axios": "^1.3.0",
+    "expect-playwright": "^0.8.0",
     "lodash": "^4.17.21",
     "octokit": "^2.0.14",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "use-query-params": "^2.1.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.30.0",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.26",
     "@types/react-datepicker": "^4.8.0",
